--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,60 @@
-google-cloud-vision
-fastapi
-python-dotenv
-fastapi-jwt-auth
-passlib
-pydantic
-bcrypt
-uvicorn
-gunicorn
+annotated-types==0.7.0
+anyio==4.4.0
+bcrypt==3.2.0
+cachetools==5.3.3
+certifi==2024.7.4
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+dnspython==2.6.1
+email_validator==2.2.0
+fastapi==0.111.0
+fastapi-cli==0.0.4
+fastapi-jwt-auth==0.5.0
+google-api-core==2.19.1
+google-auth==2.32.0
+google-cloud==0.34.0
+google-cloud-vision==3.7.3
+googleapis-common-protos==1.63.2
+grpcio==1.64.1
+grpcio-status==1.64.1
+gunicorn==22.0.0
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+orjson==3.10.6
+packaging==24.1
+passlib==1.7.4
+proto-plus==1.24.0
+protobuf==5.27.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==1.10.17
+pydantic_core==2.20.1
+Pygments==2.18.0
+PyJWT==1.7.1
+python-dotenv==1.0.1
+python-multipart==0.0.9
+PyYAML==6.0.1
+requests==2.32.3
+rich==13.7.1
+rsa==4.9
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+starlette==0.37.2
+typer==0.12.3
+typing_extensions==4.12.2
+ujson==5.10.0
+urllib3==2.2.2
+uvicorn==0.30.1
+watchfiles==0.22.0
+websockets==12.0
